Fixed alignment of some text fields in DataView and ConsolidatedView, updated CSS class names to GridCellText and GridCellNumber
git-svn-id: svn+ssh://devel.inticol.com/home/svn/di8/trunk@1404 9cf8542c-9828-0410-8776-d8f572d62bc1

--- a/web/css/desinventar.css
+++ b/web/css/desinventar.css
@@ -88,12 +88,12 @@ table.col {
 	overflow: auto; font-size:10px; border: thin solid;
 }
 
-.StatisticCellNumber {
+.GridCellNumber {
 	border-right: thin solid #ccc; text-align: right;
 }
 
-.StatisticCellText {
-	text-align: left;
+.GridCellText {
+	border-right: thin solid #ccc; text-align: left;
 }
 
 .header     { 
